--- a/IBid.PL/Views/Shared/_LayoutVolunteer.cshtml
+++ b/IBid.PL/Views/Shared/_LayoutVolunteer.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Access" asp-action="Index">IBid.PL</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Volunteer" asp-action="Index">IBid.PL</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,13 +20,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Access" asp-action="AdminLogIn">Log in as Admin</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Volunteer" asp-action="ShowBids">Bids</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Access" asp-action="VolunteerLogIn">Log in as Volunteer</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Access" asp-action="VolunteerSignUp">Sign up as Volunteer</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Volunteer" asp-action="LogOut">Log out</a>
                         </li>
                     </ul>
                 </div>
