--- a/IBid.PL/Views/Admin/CreateBid.cshtml
+++ b/IBid.PL/Views/Admin/CreateBid.cshtml
@@ -19,19 +19,9 @@
                 <span asp-validation-for="ItemId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="VolunteerId" class="control-label"></label>
-                <input asp-for="VolunteerId" class="form-control" />
-                <span asp-validation-for="VolunteerId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="StartingPrice" class="control-label"></label>
                 <input asp-for="StartingPrice" class="form-control" />
                 <span asp-validation-for="StartingPrice" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CurrentPrice" class="control-label"></label>
-                <input asp-for="CurrentPrice" class="form-control" />
-                <span asp-validation-for="CurrentPrice" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="StartTime" class="control-label"></label>
@@ -51,6 +41,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="ShowBids">Back to List</a>
 </div>
 
